// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="ant-input"
      type="text"
      value=""
    >
      <input
        className="ant-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        type="search"
      >
        <AntdIcon
          className="anticon"
          type="search"
        >
          <svg
            className="anticon"
            data-icon="search"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M769.2 254.8C726.2 211.7 668.9 188 608 188s-118.2 23.7-161.2 66.8C403.7 297.8 380 355.1 380 416s23.7 118.2 66.8 161.2c43 43.1 100.3 66.8 161.2 66.8s118.2-23.7 161.2-66.8c43.1-43 66.8-100.3 66.8-161.2s-23.7-118.2-66.8-161.2z"
              fill="none"
              key="path-0"
            />
            <path
              d="M608 112c-167.9 0-304 136.1-304 304 0 70.3 23.9 135 63.9 186.5L114.3 856.1c-3.1 3.1-3.1 8.2 0 11.3l42.3 42.3c3.1 3.1 8.2 3.1 11.3 0l253.6-253.6C473 696.1 537.7 720 608 720c167.9 0 304-136.1 304-304S775.9 112 608 112zm161.2 465.2C726.2 620.3 668.9 644 608 644s-118.2-23.7-161.2-66.8C403.7 534.2 380 476.9 380 416s23.7-118.2 66.8-161.2c43-43.1 100.3-66.8 161.2-66.8s118.2 23.7 161.2 66.8c43.1 43 66.8 100.3 66.8 161.2s-23.7 118.2-66.8 161.2z"
              key="path-1"
            />
          </svg>
        </AntdIcon>
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="ant-input"
      type="text"
      value="a"
    >
      <input
        className="ant-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="a"
      />
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        type="cross-circle"
      >
        <AntdIcon
          className="anticon"
          type="cross-circle"
        />
      </Icon>
    </a>
  </div>
</Search>
`;
